# realmsofeldoria

./: CHANGES.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.claude/: settings.local.json
client/: ascii_client.cpp  graphics_client.cpp  graphics_test.cpp  main.cpp  map_test.cpp  ncurses_client.cpp
client/render/: MapView.cpp  MapView.h
client/ui/: BattleWindow.cpp  BattleWindow.h  HeroPanel.cpp  HeroPanel.h  ResourceBar.cpp  ResourceBar.h
include/: GameTypes.h
lib/: GameTypes.cpp
lib/battle/: Battle.cpp  Battle.h
lib/entities/creature/: Creature.cpp  Creature.h
lib/entities/hero/: Hero.cpp  Hero.h
lib/gamestate/: GameState.cpp  GameState.h
lib/geometry/: Color.h  Point.h  Rect.cpp  Rect.h
lib/gui/: Widget.cpp  Widget.h
lib/map/: GameMap.cpp  GameMap.h
lib/render/: Canvas.cpp  Canvas.h  Font.cpp  Font.h  Image.cpp  Image.h
server/: main.cpp
tools/: generate_placeholder_tiles.py
